<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/websiteDetail_title_margin"
        android:text="@string/welcome" />

    <EditText 
        	android:id="@+id/domainInput"
        	android:singleLine="true"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/domain_name"/>
    <Button
        	android:id="@+id/domainSubmitButton"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="right"
        	android:gravity="right"
        	android:text="@string/submitBtn_name" /> 		

    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button 
                android:id="@+id/friendLinkBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friendLink_name"/>
            <Button 
                android:id="@+id/websiteFastBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/websiteFast_name"/>
            <Button 
                android:id="@+id/websitePingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/websitePing_name"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <Button 
                android:id="@+id/routeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_name"/>
            <Button 
                android:id="@+id/dnsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dns_name"/>
            <Button 
                android:id="@+id/pageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pageQuery_name"/>
        </TableRow>
        <TableRow
			android:layout_width="match_parent"
        	android:layout_height="wrap_content">
            <Button 
                android:id="@+id/prBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prQuery_name"/>
            <Button 
                android:id="@+id/deadLinkBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadLink_name"/>
            <Button 
                android:id="@+id/alexaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alexa_name"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
        	android:layout_height="wrap_content">
            <Button 
                android:id="@+id/visitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="直接访问"/>
            <Button 
                android:id="@+id/spiderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spider_name"/>
            <Button 
                android:id="@+id/whoisBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whois_name"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
</ScrollView>
