<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/detailResultTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/purple"
        android:text="@string/domaindetail_name"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="15sp"
        android:textSize="@dimen/websiteDetail_title_margin"/>
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8sp"
        android:paddingRight="20dip">
        <TableRow 
            android:layout_marginBottom="4sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:paddingRight="10sp"
                android:text="@string/websiteTitle_name"/>
            <TextView 
                android:id="@+id/websiteTitleResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:textColor="@color/blue"/>
        </TableRow>
        <TableRow 
            android:layout_marginBottom="4sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:text="@string/websiteDesc_name"/>
            <TextView 
                android:id="@+id/websiteDescResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:textColor="@color/blue"/>
        </TableRow>
        <TableRow 
            android:layout_marginBottom="4sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:text="@string/websiteSEO_name"/>
            <TextView 
                android:id="@+id/websiteSEOResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:textColor="@color/blue"/>
        </TableRow>
        <TableRow 
            android:layout_marginBottom="4sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:text="@string/websiteIP_name"/>
            <TextView 
                android:id="@+id/websiteIPResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:textColor="@color/blue"/>
        </TableRow>
        <TableRow 
            android:layout_marginBottom="4sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:text="@string/websiteGCD_name"/>
            <TextView 
                android:id="@+id/websiteGCDResult"
                android:layout_width="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"/>
        </TableRow>
        <TableRow 
            android:layout_marginBottom="4sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/websiteDetail_content_margin"
                android:text="@string/websiteSpider_name"/>
            <TableLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow >
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:text="@string/googleCount_name"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:id="@+id/websiteGoogleResult"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baiduCount_name"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:id="@+id/websiteBaiduResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                </TableRow>
                <TableRow>
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/so360Count_name"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:id="@+id/website360Result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:layout_marginRight="5sp"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sosoCount_name"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:id="@+id/websiteSoSoResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                </TableRow>
                <TableRow>
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bingCount_name"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:id="@+id/websiteBingResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yahooCount_name"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                    <TextView 
                        android:id="@+id/websiteyahooResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/websiteDetail_content_margin"
                        android:textColor="@color/blue"/>
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>    
    
    
</LinearLayout>
